# sondi

./: .gitignore  README.md  pyproject.toml
src/sondi/: __init__.py
